<resources>
    <string name="app_name">7Petals</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="nav_diary">Дневник</string>
    <string name="nav_profile">Профиль</string>
    <string name="nav_recipes">Рецепты</string>
    <string name="nav_premium">Premium</string>
    <string name="nav_conversation">Общение</string>
    <string name="for_100_g_of_product"> Ккал на 100 г продукта</string>


    <!--registration_fragment_ferst-->
    <string name="reg_et_hello">Добро пожаловать!</string>
    <string name="reg_et_have_account">Есть аккаунт?</string>
    <string name="reg_btn_reg">Регистрация</string>
    <string name="reg_btn_login">Войти</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--onboarding_fragment_start-->
    <string name="onb_tv_great">Отлично!</string>
    <string name="onb_tv_text">Теперь давай я расскажу про наш сервис подробнее</string>
    <string name="onb_btn_next">Дальше</string>


    <!--onboarding_fragment_premium-->
    <string name="onb_btn_premium">Обновить до Premium</string>
    <string name="onb_tv_close_premium">Нет, я подключу услугу позже</string>

    <!--onboarding_fragment_spinner-->
    <string name="tv_tets">Контролируйте то, что вы едите. Автоматический расчет белков, жиров углеводов.</string>


    <!--registration_fragment_main-->
    <string name="reg_tv_hou_copmfortable">Как тебе удобней входить в систему?</string>
    <string name="reg_tv_contract">Условия предоставления услуг</string>
    <string name="reg_btn_google">Войти через Google</string>
    <string name="reg_btn_facebook">Войти через Facebook</string>
    <string name="reg_btn_reg_email">Регистрация по Email</string>
    <!--<string name="default_web_client_id">AIzaSyDy9WA42GKsPgE4XjUsHgcluh3OkTBboeo</string>-->

    <!--registration_fragment_hello-->
    <string name="reg_tv_hello">Привет!</string>
    <string name="reg_tv_hello_body">Я твой консультант по питанию. Расскажи мне о себе.</string>

    <!--registration_fragment_login-->
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="emailpassword_status_fmt">Email User: %1$s </string>
    <string name="auth_failed">Authentication failed</string>
    <string name="empty_field">empty_field</string>


    <!--Activity Authenticate-->
    <string name="auth_btn_google">Войти через Google</string>
    <string name="auth_btn_facebook">Войти через Facebook</string>
    <string name="auth_btn_sig_in">Войти</string>
    <string name="auth_btn_sign_out">Выйти</string>
    <string name="auth_btn_reset_pass">Восстановить пароль</string>
    <string name="auth_et_email">Имейл</string>
    <string name="auth_et_pass">Пароль</string>
    <string name="auth_tv_status">Status</string>
    <string name="auth_btn_new_user">Регистрация</string>
    <!--<string name="default_web_client_id" translatable="false">472707496821-59rr9snaehrkd9hnhag5gb7420qo920a.apps.googleusercontent.com</string>-->



</resources>
