<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_diary"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_diary" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/nav_profile" />

    <item
        android:id="@+id/nav_recipes"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/nav_recipes" />

    <item
        android:id="@+id/nav_premium"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/nav_premium" />
    <item
        android:id="@+id/nav_conversation"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/nav_conversation" />

</menu>
