<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wsoteam.diet.Authenticate.ActivityAuthenticate">

    <Button
        android:id="@+id/auth_btn_google"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/auth_btn_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/auth_btn_facebook"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_btn_facebook"
        app:layout_constraintEnd_toEndOf="@+id/auth_btn_google"
        app:layout_constraintStart_toStartOf="@+id/auth_btn_google"
        app:layout_constraintTop_toBottomOf="@+id/auth_btn_google" />

    <EditText
        android:id="@+id/auth_et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/auth_et_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_btn_facebook" />

    <EditText
        android:id="@+id/auth_et_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/auth_et_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/auth_et_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/auth_et_email"
        app:layout_constraintTop_toBottomOf="@+id/auth_et_email" />

    <Button
        android:id="@+id/auth_btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginBottom="160dp"
        android:text="@string/auth_btn_sig_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/auth_btn_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/auth_btn_sign_out"
        app:layout_constraintBottom_toBottomOf="@+id/auth_btn_sign_in"
        app:layout_constraintStart_toEndOf="@+id/auth_btn_sign_in"
        app:layout_constraintTop_toTopOf="@+id/auth_btn_sign_in"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/auth_btn_reset"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/auth_btn_reset_pass"
        app:layout_constraintStart_toStartOf="@+id/auth_btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/auth_btn_sign_in" />

    <TextView
        android:id="@+id/auth_tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/auth_tv_status"
        app:layout_constraintEnd_toEndOf="@+id/auth_btn_reset"
        app:layout_constraintStart_toStartOf="@+id/auth_btn_reset"
        app:layout_constraintTop_toBottomOf="@+id/auth_btn_reset" />

    <Button
        android:id="@+id/auth_btn_new_user"
        android:layout_width="99dp"
        android:layout_height="71dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/auth_btn_new_user"
        app:layout_constraintBottom_toBottomOf="@+id/auth_btn_reset"
        app:layout_constraintEnd_toEndOf="@+id/auth_btn_sign_out"
        app:layout_constraintStart_toEndOf="@+id/auth_btn_reset"
        app:layout_constraintTop_toTopOf="@+id/auth_btn_reset"
        app:layout_constraintVertical_bias="0.49" />

</android.support.constraint.ConstraintLayout>
